# Travel-Expense-Calculator

./: .gitignore  Cargo.toml  LICENSE  README.md  Travel Expense Calculator.py  package-lock.json  package.json
.github/workflows/: deploy-pages.yml  release.yml
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: lib.rs  main.rs  update_check.rs
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/reference-data/: mock-reference.csv
apps/web/src/: main.tsx  styles.css
apps/web/src/features/charts/: ExpenseCharts.tsx
apps/web/src/features/estimator/: EstimatorPage.tsx
apps/web/src/features/export/: wordTableFormatter.ts
apps/web/src/features/reference/: referenceService.ts
apps/web/src/features/update/: UpdateBanner.tsx
apps/web/src/lib/: calculator.ts  types.ts
apps/web/tests/: estimator-flow.spec.ts
scripts/: desktop-smoke.ps1  migrate.py
