[workspace]
members = [
  "packages/calc-core-rust",
  "packages/calc-core-wasm",
  "apps/desktop-tauri/src-tauri"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "1.0.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
